[tool.poetry]
name = "qiyu-api"
version = "0.7.1"
description = "奇遇科技 Python API 合集"
homepage = "https://oss.qiyutech.tech/"
repository = "https://github.com/QiYuTechDev/qiyu-api"
authors = ["dev <dev@qiyutech.tech>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"

pydantic = ">=1.7,<2"
structlog = ">=21,<22"

aiohttp = ">=3.7.4,<4"
requests = ">=2.25,<3"

# for mob api
pydes = ">=2,<3"

# apple sign in dep
# JSON Web token support
pyjwt = ">=2.0,<3"

# JWT dep on this
cryptography = ">=3.0,<4.0"

[tool.poetry.dev-dependencies]
black = "*"
pytest = "*"
pytest-asyncio = "*"
pylama = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
